fixed 100vh, 100vw and some scrollbars

--- a/public/index.css
+++ b/public/index.css
@@ -32,8 +32,11 @@
 }
 
 #root {
-    width: 100vw;
-    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 
     display: grid;
     grid-template-areas:
