--- a/public/pages/artists/artists.css
+++ b/public/pages/artists/artists.css
@@ -30,9 +30,9 @@
     gap: 1.5rem;
 
     max-width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
-    scrollbar-width: none;
+    padding-bottom: 1rem;
 }
 
 #artists #recommendations > .cards {
