--- a/public/pages/main/main.css
+++ b/public/pages/main/main.css
@@ -45,7 +45,7 @@
     gap: 1.5rem;
 
     max-width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
     padding-bottom: 1rem;
 }
