--- a/public/pages/songs/songs.css
+++ b/public/pages/songs/songs.css
@@ -34,9 +34,9 @@
     gap: 1.5rem;
 
     max-width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
-    scrollbar-width: none;
+    padding-bottom: 1rem;
 }
 
 #songs #recommendations .songs {
